Aufgabe6/6.2/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
        - name: html-openshift-app
          image: 'ghcr.io/timure228/html-openshift-app:v1'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 200Mi
            requests:
              cpu: '1'
              memory: 100Mi
          imagePullPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app-backend
  labels:
    app: html-openshift-app-backend
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app-backend
  template:
    metadata:
      labels:
        app: html-openshift-app-backend
    spec:
      containers:
        - name: html-openshift-app
          image: 'ghcr.io/timure228/html-openshift-app-backend:v1'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 200Mi
            requests:
              cpu: '1'
              memory: 100Mi
          imagePullPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app-db
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app-db
  template:
    metadata:
      labels:
        app: html-openshift-app-db
    spec:
      volumes:
        - name: html-openshift-app
          persistentVolumeClaim:
            claimName: html-openshift-app
      containers:
        - name: html-openshift-app-db
          resources: {}
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: html-openshift-app
              mountPath: /var/lib/pgsql/data
          image: 'registry.redhat.io/rhel8/postgresql-15:latest'
          imagePullPolicy: Always
