Aufgabe6/6.2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: html-openshift-app
---
kind: Service
apiVersion: v1
metadata:
  name: html-openshift-app-db
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  ports:
    - name: html-openshift-app-db
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: html-openshift-app-db
---
kind: Service
apiVersion: v1
metadata:
  name: html-openshift-app-backend
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  ports:
    - name: html-openshift-app-backend
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: html-openshift-app-backend
